# good_fundamentals

./: .gitignore  README.md
code/apps/data/: gics.json
code/apps/gf_loader/: Pipfile
code/apps/gf_loader/gf_loader/: __init__.py  __main__.py
code/apps/gf_loader/gf_loader/config/: logging.cfg  luigi-dev.cfg  luigi-prod.cfg  luigi-test.cfg
code/apps/gf_loader/gf_loader/src/tasks/: __init__.py  _config.py  _targets.py  _tasks.py
code/apps/gf_loader/test/: __init__.py  conftest.py  targets_test.py
code/db_script/: create.js  create_all.js  create_dev.js  create_prod.js  create_test.js
code/libs/gf_lib/: Pipfile  pyproject.toml  setup.py
code/libs/gf_lib/db/: create.txt
code/libs/gf_lib/gf_lib/: __init__.py  errors.py
code/libs/gf_lib/gf_lib/datastore/: __init__.py  _company.py  _datastore_utils.py  _earnings.py  _gics_classification.py  _gics_sector.py  _master.py  _masterlist.py  _masterlist_datastore.py  _statement.py  _task_control.py
code/libs/gf_lib/gf_lib/model/: __init__.py  _alphavantage.py  _database.py
code/libs/gf_lib/gf_lib/services/: __init__.py  _alphavantage.py  _openfigi.py  _sec.py  _wikipedia.py
code/libs/gf_lib/gf_lib/utils/: __init__.py  _logging.py  _os.py
code/libs/gf_lib/test/: alphavantage_parsers_test.py  conftest.py  datastore_test.py  model_database_test.py  openfigi_service_test.py  sec_service_test.py  utils_test.py  validators_test.py  wikipedia_service_test.py
design/: database.dmm  master_list.md
