[tool.poetry]
name = "gf_lib"
version = "0.1.0"
description = ""
authors = ["James Dooley <81564302+dooley-ch@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.10"
attrs = "^21.4.0"
pendulum = "^2.1.2"
pymongo = "^4.1.1"
dnspython = "^2.2.1"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
